# tapedeck

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  WG.Dockerfile  docker-compose.yml  manage.py  requirements.txt  wg-entrypoint.sh
backend/: Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: auth.rs  config.rs  db.rs  error.rs  iplayer.rs  main.rs  models.rs  queue.rs  state.rs
backend/src/routes/: mod.rs  queue.rs  search.rs  settings.rs  users.rs  ws.rs
frontend/: ember-cli-build.js  package.json
frontend/app/: app.js  index.html  router.js
frontend/app/controllers/: login.js  queue.js  search.js  settings.js
frontend/app/helpers/: includes.js
frontend/app/routes/: application.js  login.js  queue.js  search.js  settings.js
frontend/app/services/: api.js  socket.js
frontend/app/styles/: app.css
frontend/app/templates/: login.hbs  queue.hbs  search.hbs  settings.hbs
frontend/config/: environment.js
music/: admin.py  models.py  tasks.py
podcasts/: admin.py  models.py  tasks.py
static/: index.html
static/app/: main.js
static/app/viewmodels/: home.js  shell.js
static/app/views/: home.html  shell.html
static/styles/: shell.css
tapedeck/: celery.py  settings.py  urls.py  wsgi.py
templates/: main.html
