[package]
name = "tapedeck"
version = "0.1.0"
edition = "2024"
description = "BBC iPlayer downloader service with web UI"
license = "GPL-3.0-or-later"

[[bin]]
name = "tapedeck"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
    "fs",
    "cors",
    "compression-gzip",
    "trace",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
    "migrate",
] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
argon2 = "0.5"
rand = { version = "0.10.0" }
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
envy = "0.4"
dotenvy = "0.15"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
regex = "1"
once_cell = "1"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls",
    "query",
] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
axum-test = "18"
